--- a/css/style.css
+++ b/css/style.css
@@ -1081,12 +1081,13 @@
 			line-height: 1.35;
 			margin-bottom: 0.5em;
 		}
-		
+		/* works for logo, breaks images, caution
 			img {
 				max-width: 600px;
 				width: 90%;
 				height: auto;
 				}
+	    */
 
 		#banner p {
 			color: #aaa;
