--- a/css/style.css
+++ b/css/style.css
@@ -1063,7 +1063,7 @@
 	#banner {
 		padding: 10em 0 8em 0;
 		background-attachment: fixed;
-		background-image: url("images/overlay.png"), url("../images/banner.png");
+		background-image: url("images/overlay.png"), url("../images/banner.jpg");
 		background-position: center top;
 		background-size: cover;
 		line-height: 1.75;
