--- a/css/style.css
+++ b/css/style.css
@@ -542,12 +542,12 @@
 			}
 
 		.image.rounded {
-			border-radius: 100%;
+			border-radius: 5%;
 		}
 
 			.image.rounded img {
-				border: solid 0.5em rgba(144, 144, 144, 0.25);
-				border-radius: 100%;
+				border: solid 0.2em rgba(144, 144, 144, 0.25);
+				border-radius: 5%;
 			}
 
 		.image.captioned {
@@ -1104,6 +1104,46 @@
 	body.is-touch #banner {
 		background-attachment: scroll;
 	}
+
+/* Spotify ID */
+
+#spotid {
+	padding: 10em 0 8em 0;
+	background-attachment: fixed;
+	background-image: url("images/overlay.png"), url("../images/spotify.jpg");
+	background-position: center top;
+	background-size: cover;
+	line-height: 1.75;
+	text-align: center;
+}
+
+	#spotid :last-child {
+		margin-bottom: 0;
+	}
+
+	#spotid h2 {
+		color: #ffffff;
+		display: inline-block;
+		font-size: 3.5em;
+		line-height: 1.35;
+		margin-bottom: 0.5em;
+	}
+
+	#spotid p {
+		color: #aaa;
+		font-size: 1.5em;
+		margin-bottom: 1.75em;
+		text-transform: uppercase;
+	}
+
+	#spotid p.class2 {;
+		margin-top: 0em;
+		margin-bottom: 0em;
+	}
+
+body.is-touch #spotid {
+	background-attachment: scroll;
+}
 
 /* Main */
 
