--- a/css/style.css
+++ b/css/style.css
@@ -1145,6 +1145,46 @@ body.is-touch #spotid {
 	background-attachment: scroll;
 }
 
+/* Dice Roller ID */
+
+#diceid {
+	padding: 10em 0 8em 0;
+	background-attachment: fixed;
+	background-image: url("images/overlayHalf.png"), url("../images/diceRoller.png");
+	background-position: center top;
+	background-size: cover;
+	line-height: 1.75;
+	text-align: center;
+}
+
+	#diceid :last-child {
+		margin-bottom: 0;
+	}
+
+	#diceid h2 {
+		color: #ffffff;
+		display: inline-block;
+		font-size: 3.5em;
+		line-height: 1.35;
+		margin-bottom: 0.5em;
+	}
+
+	#diceid p {
+		color: #aaa;
+		font-size: 1.5em;
+		margin-bottom: 1.75em;
+		text-transform: uppercase;
+	}
+
+	#diceid p.class2 {;
+		margin-top: 0em;
+		margin-bottom: 0em;
+	}
+
+body.is-touch #diceid {
+	background-attachment: scroll;
+}
+
 /* Main */
 
 	#main {
