Contact banner revision and minor text/syntax changes!

--- a/css/style.css
+++ b/css/style.css
@@ -1203,7 +1203,7 @@ body.is-touch #diceid {
 
 		.wrapper.style3 {
 			background-attachment: fixed;
-			background-image: url("images/overlay.png"), url("../images/banner.jpg");
+			background-image: url("images/overlay.png"), url("../images/bannerBlue.png");
 			background-position: center center;
 			background-size: cover;
 		}
