--- a/css/style.css
+++ b/css/style.css
@@ -534,7 +534,7 @@
 		.image.fit {
 			display: block;
 			margin: 0 0 2em 0;
-			width: 100%;
+			width: 80%;
 		}
 
 			.image.fit img {
@@ -1182,6 +1182,46 @@ body.is-touch #spotid {
 	}
 
 body.is-touch #diceid {
+	background-attachment: scroll;
+}
+
+/* Generic Page ID */
+
+#genericid {
+	padding: 10em 0 8em 0;
+	background-attachment: fixed;
+	background-image: url("images/overlayHalf.png"), url("../images/bannerTools.png");
+	background-position: center top;
+	background-size: cover;
+	line-height: 1.75;
+	text-align: center;
+}
+
+	#genericid :last-child {
+		margin-bottom: 0;
+	}
+
+	#genericid h2 {
+		color: #ffffff;
+		display: inline-block;
+		font-size: 3.5em;
+		line-height: 1.35;
+		margin-bottom: 0.5em;
+	}
+
+	#genericid p {
+		color: #aaa;
+		font-size: 1.5em;
+		margin-bottom: 1.75em;
+		text-transform: uppercase;
+	}
+
+	#genericid p.class2 {;
+		margin-top: 0em;
+		margin-bottom: 0em;
+	}
+
+body.is-touch #bannerid {
 	background-attachment: scroll;
 }
 
