--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -140,7 +140,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
+h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; font-size:32px; font-family: 'Space Grotesk'; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
@@ -176,6 +176,10 @@ p {
   color: #00AE9E;
 }
 
+.scrambles {
+  font-size:32px;
+  font-family: 'Space Grotesk';
+}
 
 
 
