--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,7 +154,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; font-size:32px; font-family: 'Space Grotesk'; }
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
-h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; font-size:32px; font-family: 'Space Grotesk'; }
+h4 { font-size: 2.4rem; line-height: 1.2; letter-spacing: -.08rem; font-family: 'Space Grotesk'; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
@@ -163,7 +163,7 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
   h1 { font-size: 5.0rem; }
   h2 { font-size: 4.2rem; }
   h3 { font-size: 3.6rem; }
-  h4 { font-size: 3.0rem; }
+  h4 { font-size: 2.8rem; }
   h5 { font-size: 2.4rem; }
   h6 { font-size: 1.5rem; }
 }
@@ -465,9 +465,68 @@ hr {
   font-size: 0.917em;
 }
 
+/* Substack
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+.substack-box-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto; /* This will center the box container horizontally */
+}
 
+.substack-box {
+  display: block;
+  width: 100%; /* Make the box take the full width of the container */
+  max-width: 600px; /* But don't let it exceed 600px */
+  background: rgba(255, 255, 255, 0.1);
+  margin: 4px;
+  padding: 20px;
+  border-radius: 4px;
+  transition: background 0.3s ease-in-out;
+  box-sizing: border-box; /* Include padding and border in box's total width and height */
+  text-decoration: none;
+  color: #d2d2d2;
+}
 
+.substack-box:hover {
+  background: #FF6001;
+}
 
+.substack-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.substack-title {
+  font-size: 20px;
+  font-weight: bold;
+  font-family: 'Space Grotesk';
+}
+
+.substack-description {
+  font-size: 16px;
+}
+
+.substack-date {
+  font-size: 14px;
+  color: #999999;
+}
+
+.substack-link {
+  display: block;
+  text-align: center;
+  color: #999999;
+  text-decoration: none;
+}
+
+.ellipsis {
+  text-align: center;
+  font-family: 'Space Grotesk';
+  font-size: 2em; /* Adjust this to change the size of the ellipsis */
+  color: #999999;
+}
 
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -505,3 +564,4 @@ there.
 
 /* Larger than Desktop HD */
 @media (min-width: 1200px) {}
+
